// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeSummaryBar render inverted badges 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    className="outcome-summary"
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass"
    >
      <span
        aria-hidden="true"
      >
        <CheckIconInverted />
      </span>
      42
    </span>
  </div>
  <div
    className="outcome-summary"
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <span
        aria-hidden="true"
      >
        <CrossIconInverted />
      </span>
      13
    </span>
  </div>
  <div
    className="outcome-summary"
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete"
    >
      <span
        aria-hidden="true"
      >
        <CircleIcon />
      </span>
      7
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show by count 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    className="outcome-summary"
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass"
    >
      <span
        aria-hidden="true"
      >
        <CheckIcon />
      </span>
      42
    </span>
  </div>
  <div
    className="outcome-summary"
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <span
        aria-hidden="true"
      >
        <CrossIcon />
      </span>
      13
    </span>
  </div>
  <div
    className="outcome-summary"
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete"
    >
      <span
        aria-hidden="true"
      >
        <CircleIcon />
      </span>
      7
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show by percentage 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    className="outcome-summary"
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass"
    >
      <span
        aria-hidden="true"
      >
        <CheckIcon />
      </span>
      42
      %
    </span>
  </div>
  <div
    className="outcome-summary"
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <span
        aria-hidden="true"
      >
        <CrossIcon />
      </span>
      13
      %
    </span>
  </div>
  <div
    className="outcome-summary"
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete"
    >
      <span
        aria-hidden="true"
      >
        <CircleIcon />
      </span>
      7
      %
    </span>
  </div>
</div>
`;
